accordion on things to do and tourism spots

--- a/html/guideSections/cafes.html
+++ b/html/guideSections/cafes.html
@@ -21,7 +21,7 @@
         <!-- collapse nav bar -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item">
@@ -55,6 +55,8 @@
         </div>
     </nav>	
     <div class="container-fluid">
+            <div class="accordion" id="accordionExample">
+
         <div class="card">
             <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
@@ -63,7 +65,7 @@
                 </button>
                 </h5>
             </div>
-            <div id="collapseOnw" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>Caffé Nero is an Italian coffee-shop chain, with a light menu of sandwiches, salads and pastries. Their coffee is specially blended and it tastes great. It is perfect for meeting up with friends or even getting a bit of work done.</p>
@@ -184,6 +186,7 @@
                     <p>Wifi: Free</p>
                     <p><strong>Can you study here?</strong> We would say that Bob & Berts is more of a coffee and something to eat kind of place, but it's totally up to you where you want to do your work!</p>
                 </div>
+            </div>
             </div>
         </div>
     </div>   
