--- a/html/guideSections/bars.html
+++ b/html/guideSections/bars.html
@@ -21,7 +21,7 @@
         <!-- collapse nav bar -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item">
@@ -55,6 +55,7 @@
         </div>
     </nav>	
     <div class="container-fluid">
+        <div class="accordion" id="accordionExample">
         <div class="card">
             <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
@@ -171,6 +172,7 @@
                     </ul>
                 </div>
             </div>
+        </div>
         </div>
     </div>
     <!-- Copyright -->
