--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -21,13 +21,13 @@
         <!-- collapse nav bar -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="../../index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="../about.html">About</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="cafes.html">Cafes </a>
                 </li>
                 <li class="nav-item">
@@ -42,7 +42,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="bars.html">Bars</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">Nightlife <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -55,6 +55,8 @@
         </div>
     </nav>	
     <div class="container-fluid">
+        <div class="accordion" id="accordionExample">
+
         <!-- Info on Limelight -->
         <div class="card">
             <div class="card-header" id="headingOne">
@@ -187,6 +189,7 @@
                     </ul>
                     <p>Food locations nearby</p>
                 </div>
+            </div>
             </div>
          </div>    
     </div>
