--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -6,7 +6,6 @@
     <link type="text/css" rel="stylesheet" href="../../css/bootstrap.css"/>
     <link type="text/css" rel="stylesheet" href="../../css/bootstrap.min.css"/>
     <link type="text/css" rel="stylesheet" href="../../css/general.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 </head>
@@ -21,7 +20,7 @@
         <!-- collapse nav bar -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class="nav-item">
                     <a class="nav-link" href="../../index.html">Home</a>
             </li>
             <li class="nav-item">
@@ -54,7 +53,7 @@
             </ul>
         </div>
     </nav>	
-    <container-fluid>
+    <div class="container-fluid">
     <div class="accordion" id="accordionExample">
         <div class="card">
             <div class="card-header" id="headingOne">
@@ -150,12 +149,11 @@
                     </ul>  
                 </div>
             </div>
-            </div>
         </div>
         <div class="card">
             <div class="card-header" id="headingFive">
                 <h5 class="mb-0">
-                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                     Made In Belfast
                 </button>
                 </h5>
@@ -177,7 +175,7 @@
                 </div>
             </div>
         </div>
-    </container-fluid>
+    </div>
 
 	<!-- Copyright -->
     <footer>
