--- a/html/guideSections/nightlife.html
+++ b/html/guideSections/nightlife.html
@@ -14,7 +14,7 @@
     <h1>Nightlife</h1>
     <!-- Nav bar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <img src="../../images/logo.jpg" width="80" height="80" id="logo">
+        <img src="../../images/logo.png" width="80" height="80" id="logo">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
