--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
+		<link rel="icon" type="image/png" sizes="16x16" href="images/favicon.png">
 	</head>
 	<body>
 	<!-- Nav bar -->
