updated help.html to be consistent with rest of site

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
 	</head>
 	<body>
+	<h1>Lost Student Guide</h1>
 	<!-- Nav bar -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-light">
 		<img src="images/logo.png" width="80" height="80" id="logo">
@@ -49,14 +50,11 @@
 		  </ul>
 		</div>
 	  </nav>	
-	<div class="container-fluid ">
-			<main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5" role="main">				
-				<div class ="container">
-					<h1>Lost Student Guide</h1>
-					<h2>Welcome to the Lost Student Guide!</h2>
-					<p>There are two universities situated Belfast. Many students are new to the area and might be feeling a little lost. Have no fear, we at the lost student guide are here to help! We have selected a few locations that students might want to know about.</p>
-					<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a> or visit our <a href="html/help.html">help page</a></p>
-				</div>
+	<div class="container-fluid">
+				<h2>Welcome to the Lost Student Guide!</h2>
+				<p>There are two universities situated Belfast. Many students are new to the area and might be feeling a little lost. Have no fear, we at the lost student guide are here to help! We have selected a few locations that students might want to know about.</p>
+				<p>We also recognise that student not only feel lost physically, but mentally too. In our <a href="/html/help.html">help section</a>, we have a collection of resources, that may be of use.</p>
+				<p>If there is something that you looking for more information on, or maybe you are feeling a little lost, you can get in touch with us <a href="html/contact.html">here</a> or via our <a>twitter: @lostStudentGuide</a> or visit our <a href="html/help.html">help page</a></p>
 				<div class ="container">
 					<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
 						<ol class="carousel-indicators">
@@ -71,7 +69,7 @@
 							<div class="carousel-item active">
 								<a href="html/guideSections/restaurants.html"><img class="d-block w-100"  alt="Image of a restaurant" src="images/fratelli-belfast.jpg"></a>
 								<div class="carousel-caption d-none d-md-block">
-									<h3 style="color:white">Restaurants</h3>
+									<h1 style="color:white">Restaurants</h1>
 									<p><a href="html/guideSections/restaurants.html" style="color:white">Click here to find out about restuarants in Belfast</a></p>
 
 								</div>
@@ -79,35 +77,35 @@
 							<div class="carousel-item"> 
 								<a href="html/guideSections/bars.html"><img class="d-block w-100" alt="Image of a bar" src="images/filthy-mcnastys.jpg"></a>
 								<div class="carousel-caption d-none d-md-block">
-									<h3 style="color:white">Bars</h3>
+									<h1 style="color:white">Bars</h1>
 									<p><a href="html/guideSections/bars.html" style="color:white">Click here to find out about bars in Belfast</a></p>
 								</div>
 							</div>
 							<div class="carousel-item">
 								<img class="d-block w-100" alt="Image of a cafe" src="images/cafe-parisien.jpg" >
 								<div class="carousel-caption d-none d-md-block">
-									<h3 style="color:white">Cafes</h3>
+									<h1 style="color:white">Cafes</h1>
 									<p><a href="html/guideSections/cafes.html" style="color:white">Click here to find out about cafes in Belfast</a></p>
 								</div>
 							</div>
 							<div class="carousel-item">
 									<a href="html/guideSections/nightlife.html"><img class="d-block w-100"  alt="Image of nightlife" src="images/nightlife.jpg"></a>
 								<div class="carousel-caption d-none d-md-block">
-									<h3 style="color:white">Nightlife</h3>
+									<h1 style="color:white">Nightlife</h1>
 									<p><a href="html/guideSections/nightlife.html" style="color:white">Click here to find out about the nightlife in Belfast</a></p>
 								</div>
 							</div>
 							<div class="carousel-item">
 									<a href="html/guideSections/thingsToDo.html" style="color:white"><img class="d-block w-100" alt="Image of things to do" src="images/concert-show.jpg"></a>
 								<div class="carousel-caption d-none d-md-block">
-									<h3 style="color:white">Things to Do</h3>
+									<h1 style="color:white">Things to Do</h1>
 									<p><a href="html/guideSections/thingsToDo.html" style="color:white">Click here to find out about the things you can do in Belfast</a></p>
 								</div>
 							</div>
 							<div class="carousel-item">
 								<a href="html/guideSections/tourismSpots.html"><img class="d-block w-100" alt="Image of tourism spots" src="images/titanic-boat.jpg"></a>
 								<div class="carousel-caption d-none d-md-block">
-									<h3 style="color:white">Toursim Spots</h3>
+									<h1 style="color:white">Toursim Spots</h1>
 									<p><a href="html/guideSections/tourismSpots.html" style="color:white">Click here to find out about the things you can do here in Belfast and the rest of Northern Ireland</a></p>
 								</div>
 							</div>
@@ -123,7 +121,6 @@
 						</div>
 					</div>
 				</div>
-			</main>
 		</div>
 		<!-- Copyright -->
 		<footer>
