updated contact page to be consistent with rest of site

--- a/html/guideSections/restaurants.html
+++ b/html/guideSections/restaurants.html
@@ -64,7 +64,7 @@
                 </button>
             </h5>
             </div>
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
             <div class="card-body">
                 <h5 class="card-title">What we think you should know</h5>
                 <p>French Village Cafe & Bistro is the perfect place for anything from a quick coffee and a traybake, to an evening meal (you can even bring your own bottle! We love their sandwiches from the deli!</p>
