--- a/html/guideSections/thingsToDo.html
+++ b/html/guideSections/thingsToDo.html
@@ -54,7 +54,7 @@
         </div>
     </nav>	
     <div class="container-fluid">
-        <div class="accordion" id="accordion-Example">
+        <div class="accordion" id="accordionExample">
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h5 class="mb-0">
