--- a/html/guideSections/tourismSpots.html
+++ b/html/guideSections/tourismSpots.html
@@ -65,7 +65,7 @@
                 </button>
                 </h5>
             </div>
-            <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                 <div class="card-body">
                     <h5 class="card-title">What we think you should know</h5>
                     <p>The award-winning Titanic Belfast first opened in 2012, it’s a monument to Belfast’s maritime heritage and it can be found on the previous Hardland & Wolff shipyard in the city’s Titanic Quarter where the RMS Titanic was originally built. The museum tells the stories of the Titanic and contains a series of galleries, private function rooms and community facilities. They also recently added Hickson’s Point destination bar in March of this year, which is inspired by one of the first ship builders in Belfast. It offers authentic 1900’s public house setting. The Titanic museum is by far one of the most popular iconic tourist attractions, with having won the ‘World’s Leading Tourist Attraction’ at the Tourism Oscars in 2016. </p>
