--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 			<li class="nav-item">
 			  <a class="nav-link" href="html/guideSections/nightlife.html">Nightlife</a>
 			</li>
+			<li class="nav-item">
+					<a class="nav-link" href="html/contact.html">Contact</a>
+				</li>
 			 <li class="nav-item">
 			  <a class="nav-link" href="html/help.html">Help</a>
 			</li>
