updated bars html so h1 above navigation

--- a/html/help.html
+++ b/html/help.html
@@ -56,7 +56,7 @@
     </nav>	
     <div class="container-fluid">
         <h2>Starting university and moving away from home can be daunting. The important thing to remember is that you are not alone. There are people out there that can help you.</h2>
-        <div class="card card-help">
+        <div class="card" id="card-help-mental">
             <div class="card-header">
                 <h2>Mental Health Services</h2>
             </div>
@@ -85,7 +85,7 @@
                 </ul>
             </div>
         </div>
-        <div class="card card-help">
+        <div class="card" id="card-help-physical">
             <div class="card-header">
                 <h2>Physical Health Services</h2>
             </div>
