--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			  <a class="nav-link" href="html/guideSections/nightlife.html">Nightlife</a>
 			</li>
 			<li class="nav-item">
-					<a class="nav-link" href="html/contact.html">Contact</a>
+					<a class="nav-link" href="html/contact.html">Contact Us</a>
 				</li>
 			 <li class="nav-item">
 			  <a class="nav-link" href="html/help.html">Help</a>
