Content/ card added to About layout

--- a/html/about.html
+++ b/html/about.html
@@ -2,8 +2,107 @@
 <html>
 <head>
     <title>About Us</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link type="text/css" rel="stylesheet" href="../css/bootstrap.css"/>
+     <link type="text/css" rel="stylesheet" href="../css/bootstrap.min.css"/>
+     <link type="text/css" rel="stylesheet" href="../css/general.css"/>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+     <link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Coming+Soon" rel="stylesheet">
+     <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon.png">
+<style>
+img {
+    border-radius: 50%;
+}
+.left {
+    float: left;
+    padding: 30px;
+}
+.right {
+    float: right;
+     padding: 30px;
+
+}
+</style>
 </head>
 <body>
-    <h1>About Lost Student Guide</h1>
+    <!-- Nav bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <img src="../images/logo.png" width="80" height="80" id="logo">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <!-- collapse nav bar -->
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+        <li class="nav-item ">
+            <a class="nav-link" href="../index.html">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../html/guideSections/cafes.html">Cafes</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../html/guideSections/restaurants.html">Restaurants</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../html/guideSections/thingsToDo.html">Things To Do</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../html/guideSections/tourismSpots.html">Tourism Spots</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../html/guideSections/bars.html">Bars</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="../html/guideSections/nightlife.html">Nightlife</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Contact Us<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="help.html">Help</a>
+        </li>
+        </ul>
+    </div>
+</nav>  
+
+ <h1>About Lost Student Guide</h1>
+<div class="container-fluid">
+    <p>The Lost Student Guide is a website targeted at new students made by students. We want to help those who've just moved to Belfast to study and don't know their surroundings very well. We also understand the fact that starting university can be very daunting so we provide a list of mental and physical health services for you on our <a href="help.html">Help</a> page.   </p>
+
+	<!-- Here to help physicallay and emotionally -->
+
+    <p>We bring everything you'll need to know plus more on our website, so you hopefully won't be feeling lost for much longer!</p>
+
+     <div class="card card-help">
+        <div class="card-header">
+<h2>Meet the Team</h1>
+
+<div class="card-body">
+    <ul class="list-group">
+         <li class="list-group-item">
+<div class="left" padding-left="30p">
+    <h2>Meet Ciara</h2>
+<img class="img-circle" src="../images/ciara_profile.jpg" align="left" alt="Profile photo of Ciara" width="304" height="260"> 
+
+</div></li>
+</div>
+
+ <ul class="list-group">
+<li class="list-group-item">
+<div class="right">
+<h2>Meet Saoirse</h2>
+<img class="img-circle" src="../images/saoirse_profile.jpg" align="right" alt="profile photo of Saoirse" width="304" height="260"> 
+
+
+<p>Hi & welcome to the Lost Student Guide. I'm Saoirse and I'm currently in my third year of university. So I understand how scary it can be for new students who are just starting off with their studies and don't know their way around the area. For that reason we put together this guide to help out new students, specifically first years who want to find their away around the city and to make the msot out of their unversity experience!  </p>
+</div>
+</li></ul>
+
+<!-- scripts -->
+</div>
 </body>
 </html>
