updated about page

--- a/html/about.html
+++ b/html/about.html
@@ -26,6 +26,7 @@ img {
 </style>
 </head>
 <body>
+    <h1>About Lost Student Guide</h1>
     <!-- Nav bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <img src="../images/logo.png" width="80" height="80" id="logo">
@@ -38,9 +39,9 @@ img {
         <li class="nav-item ">
             <a class="nav-link" href="../index.html">Home</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-        </li>
+        <li class="nav-item active">
+                <a class="nav-link" href="contact.html">Contact Us<span class="sr-only">(current)</span></a>
+            </li>
         <li class="nav-item">
             <a class="nav-link" href="../html/guideSections/cafes.html">Cafes</a>
         </li>
@@ -59,8 +60,8 @@ img {
         <li class="nav-item">
             <a class="nav-link" href="../html/guideSections/nightlife.html">Nightlife</a>
         </li>
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Contact Us<span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="help.html">Help</a>
@@ -68,41 +69,41 @@ img {
         </ul>
     </div>
 </nav>  
-
- <h1>About Lost Student Guide</h1>
 <div class="container-fluid">
-    <p>The Lost Student Guide is a website targeted at new students made by students. We want to help those who've just moved to Belfast to study and don't know their surroundings very well. We also understand the fact that starting university can be very daunting so we provide a list of mental and physical health services for you on our <a href="help.html">Help</a> page.   </p>
+    <h3>The Lost Student Guide is a website targeted at new students made by students. We want to help those who've just moved to Belfast to study and don't know their surroundings very well. We also understand the fact that starting university can be very daunting so we provide a list of mental and physical health services for you on our <a href="help.html">Help</a> page.</h3>
+	<!-- Here to help physically and emotionally -->
+    <h3>We bring everything you'll need to know plus more on our website, so you hopefully won't be feeling lost for much longer!</h3>
 
-	<!-- Here to help physicallay and emotionally -->
-
-    <p>We bring everything you'll need to know plus more on our website, so you hopefully won't be feeling lost for much longer!</p>
-
-     <div class="card card-help">
+     <div class="card" id="card-about">
         <div class="card-header">
-<h2>Meet the Team</h1>
-
-<div class="card-body">
-    <ul class="list-group">
-         <li class="list-group-item">
-<div class="left" padding-left="30p">
-    <h2>Meet Ciara</h2>
-<img class="img-circle" src="../images/ciara_profile.jpg" align="left" alt="Profile photo of Ciara" width="304" height="260"> 
-
-</div></li>
+            <h2>Meet the Team</h2>
+        </div>
+        <div class="card-body">
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <div class="left" padding-left="30p">
+                        <h2>Meet Ciara</h2>
+                        <img class="img-circle" src="../images/ciara_profile.jpg" align="left" alt="Profile photo of Ciara" width="304" height="260"> 
+                        <p>My name is Ciara and I am a computer science student in Queen's University Belfast. I am currently on placement in Kainos in Belfast. I also work in a bar on the weekends and I love dogs. You can find me on twitter:<a href="https://twitter.com/ciara_magee_"> @ciara_magee_</a> where I mostly retweet <a href="https://twitter.com/dog_rates">We Rate Dogs</a></p>
+                    </div>
+                </li>
+                <li class="list-group-item">
+                    <div class="right">
+                        <h2>Meet Saoirse</h2>
+                        <img class="img-circle" src="../images/saoirse_profile.jpg" align="right" alt="profile photo of Saoirse" width="304" height="260"> 
+                        <p>Hi & welcome to the Lost Student Guide. I'm Saoirse and I'm currently in my third year of university. So I understand how scary it can be for new students who are just starting off with their studies and don't know their way around the area. For that reason we put together this guide to help out new students, specifically first years who want to find their away around the city and to make the msot out of their unversity experience!  </p>
+                    </div>  
+                </li>
+            <ul class="list-group">
+        </div>
+    </div>
 </div>
-
- <ul class="list-group">
-<li class="list-group-item">
-<div class="right">
-<h2>Meet Saoirse</h2>
-<img class="img-circle" src="../images/saoirse_profile.jpg" align="right" alt="profile photo of Saoirse" width="304" height="260"> 
-
-
-<p>Hi & welcome to the Lost Student Guide. I'm Saoirse and I'm currently in my third year of university. So I understand how scary it can be for new students who are just starting off with their studies and don't know their way around the area. For that reason we put together this guide to help out new students, specifically first years who want to find their away around the city and to make the msot out of their unversity experience!  </p>
-</div>
-</li></ul>
-
 <!-- scripts -->
-</div>
+<footer>
+    <div class="footer-copyright text-center py-3">© 2018 Copyright: Lost Student Guide</div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script type="text/javascript" src="../js/bootstrap.js"></script>
+<script type="text/javascript"  href="../js/bootstrap.min.js"/></script>
 </body>
 </html>
